✨ Add cuda_runtime_api example and update CMake configuration to include new executable

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,6 +24,7 @@ message(STATUS "python libs: ${Python_LIBRARIES}")
 
 add_executable(hello_cuda cuda_src/hello_cuda.cu)
 add_executable(cuda_print_grid cuda_src/cuda_print_grid.cu)
+add_executable(cuda_runtime_api cuda_src/cuda_runtime_api.cu)
 add_executable(
     section3_001
     ${CMAKE_SOURCE_DIR}/submodules/CUDA_Course/section3_001.cu
