--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
     "numpy<2",
+    "ortools>=9.11.4210",
     "pybind11>=2.13.6",
 ]
 
